fix clipping with wave divider

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -94,6 +94,7 @@ section {
     display: flex;
     flex-direction: column;
     align-items: center;
+    z-index: 10;
 }
 
 .name-animate.name-container {
